static/css/legacy.css
/* ... */
.multi-input-autocomplete--series .mia__input + .mia__input {
  margin-top: 5px;
}
.multi-input-autocomplete--series .mias__name {
  flex: 1;
}
.multi-input-autocomplete--series .mias__position {
  width: 10ch;
}

/* openlibrary/templates/type/type/view.html */
ul.booklinks li {
  font-size: var(--font-size-label-medium);
  list-style-type: disc;
  margin: 0 0 10px 20px;
}

ul.booklinks li span {
  display: block;
}

ul.booklinks li div.linkRemove {
  float: right;
  padding: 0 10px 10px 15px;
}

/* openlibrary/templates/type/user/view.html */
ul.clean {
  border-top: none !important;
}

ul.clean li {
  border-bottom: none !important;
}

ul.clean li span.resultTitle {
  width: 236px;
  max-width: 236px;
}

/* openlibrary/macros/databarWork.html */
#external-links ul li {
  list-style-type: none;
}

/* openlibrary/macros/WorkInfo.html */
/* openlibrary/templates/publishers/view.html */
/* openlibrary/templates/search/authors.html */
/* openlibrary/templates/search/publishers.html */
/* openlibrary/templates/search/subjects.html */
/* openlibrary/templates/showia.html */
/* openlibrary/templates/showmarc.html */
/* openlibrary/templates/subjects.html */
/* openlibrary/templates/type/author/view.html */
/* openlibrary/templates/type/edition/view.html */
/* openlibrary/templates/type/list/view.html */
/* openlibrary/templates/type/permission/view.html */
/* openlibrary/templates/type/work/view.html */
.section .sansserif {
  font-size: 0.75em;
}

.section p {
  margin-bottom: 1em;
  margin-top: 0;
}

@import "components/page-history.css";

/* openlibrary/macros/CoverImage.html */
/* openlibrary/templates/covers/book_cover.html */
.BookTitle {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 105px;
  margin-left: -52px;
  height: 100px;
  margin-top: -50px;
  vertical-align: middle;
  color: var(--dark-grey);
  font-size: 0.875em;
  line-height: normal;
}

/* openlibrary/templates/covers/book_cover.html */
.Author {
  color: var(--grey);
  font-style: italic;
  padding: 4px 4px 0;
  font-size: var(--font-size-label-small);
}

/* openlibrary/macros/SearchResultsWork.html */
/* openlibrary/templates/type/list/embed.html */
span.actions {
  display: block;
  float: left;
  white-space: nowrap;
  max-width: 55px;
  overflow: visible;
}

span.actions a {
  display: block;
  float: left;
  min-width: 35px;
  font-family: var(--font-family-body);
  font-size: 10px;
  margin-left: 10px;
  font-weight: 700;
  text-decoration: none;
  text-align: center;
}

span.actions a span.image {
  display: block;
  width: 24px;
  height: 24px;
  margin: 0 auto;
  padding: 0;
  background-image: url(/static/images/icons/icons_sprite-sm.png);
  background-repeat: no-repeat;
}

span.actions a span.label {
  display: block;
  background-image: url();
}

span.actions span.list {
  background-position: 0 0 !important;
}

span.actions span.list:hover {
  background-position: -24px 0 !important;
}

span.actions span.read {
  background-position: -72px 0 !important;
}

span.actions span.read:hover {
  background-position: -96px 0 !important;
}

span.actions span.download {
  background-position: -144px 0 !important;
}

span.actions span.download:hover {
  background-position: -168px 0 !important;
}

span.actions span.buy {
  background-position: -216px 0 !important;
}

span.actions span.buy:hover {
  background-position: -240px 0 !important;
}

span.actions span.borrow {
  background-position: -288px 0 !important;
}

span.actions span.borrow:hover {
  background-position: -312px 0 !important;
}

span.actions span.daisy {
  background-position: -384px 0 !important;
}

span.actions span.daisy:hover {
  background-position: -408px 0 !important;
}

/* openlibrary/templates/type/list/embed.html */
span.actions a span.checked-out {
  display: block;
  margin: 0 auto;
  padding: 0;
}

/* openlibrary/templates/stats/readinglog.html */
/* openlibrary/templates/type/author/view.html */
/* openlibrary/templates/work_search.html */
/* openlibrary/templates/books/check.html */
/* openlibrary/templates/account/books.html */
/* openlibrary/macros/FulltextResults.html */
ul.list-books > li {
  display: flex;
}

/* openlibrary/macros/SearchResultsWork.html */
/* openlibrary/templates/books/check.html */
/* openlibrary/templates/lists/preview.html */
/* openlibrary/templates/lists/snippet.html */
/* openlibrary/templates/type/list/embed.html */
/* openlibrary/templates/type/list/view.html */
ul.list-books .resultTitle {
  display: block;
  margin: 0 !important;
  font-family: var(--font-family-body);
  color: var(--grey);
}

/* `span.resultTitle .bookauthor` is used in: */
/* * openlibrary/macros/SearchResultsWork.html */
/* `span.resultPublisher` is used in */
/* * openlibrary/macros/SearchResultsWork.htm */
/* * openlibrary/templates/books/check.html */
ul.list-books .resultTitle .bookauthor,
ul.list-books span.resultPublisher {
  font-size: 0.75em;
  color: var(--grey);
  font-family: var(--font-family-body);
}

/* openlibrary/templates/books/check.html */
/* openlibrary/macros/SearchResultsWork.html */
ul.list-books span.resultPublisher {
  display: block;
}

/* openlibrary/templates/books/show.html */
ul.list-books span.resultType {
  font-size: 0.6875em;
}

.list-books--grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
  grid-gap: 30px 5px;
  padding: 10px;
}

.list-books--grid .searchResultItem {
  padding: 0 5px;
  background: transparent;
  border: 0;
  position: relative;
}

.list-books--grid .searchResultItem:not(.sri--w-main),
.list-books--grid .searchResultItem .sri__main {
  display: flex;
  flex-direction: column;
}

.list-books--grid .searchResultItem .bookcover {
  width: 100%;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  margin: 0;
}

.list-books--grid .searchResultItem > .details,
.list-books--grid .searchResultItem .sri__main > .details {
  display: none;
}
/* ... */

